--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,40 +2,38 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ch.heigvd.symlabo3">
 
+    <!-- Permissions for the laboratory -->
     <uses-permission android:name="android.permission.NFC" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    // TODO : Add camera permission
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature
         android:name="android.hardware.nfc"
         android:required="true" />
-
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:hardwareAccelerated="true"
         android:theme="@style/Theme.SYM_Labo3">
         <activity
             android:name=".nfc.NFCActivity"
             android:exported="true" />
         <activity
-            android:name=".ibeacon.iBeaconActivity"
+            android:name=".beacon.BeaconActivity"
             android:exported="true" />
         <activity
-            android:name=".codebarre.CodeBarreActivity"
+            android:name=".barcode.BarcodeActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
